[package]
name = "wyvern_proxy_registry"
version = "0.1.0"
authors = ["ShengLi vlbos2018@gmail.com"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.0", default-features = false }
ink_metadata = { version = "3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0", default-features = false }
ink_storage = { version = "3.0", default-features = false }
ink_lang = { version = "3.0", default-features = false }
ink_prelude = { version = "3.0.0",  default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
# authenticated_proxy = { path = "./registry/authenticated_proxy", default-features = false }
ownable_delegate_proxy = {  version = "0.1.0", path = "./ownable_delegate_proxy",default-features = false }
ownable = { path = "./registry/ownable", default-features = false }
proxy_registry = { path = "./registry/proxy_registry", default-features = false }
[lib]
name = "wyvern_proxy_registry"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
"ownable_delegate_proxy/std",
]
ink-as-dependency = []
